--- a/client/src/Components/StudyPage/QuestionCard/QuestionCard.module.css
+++ b/client/src/Components/StudyPage/QuestionCard/QuestionCard.module.css
@@ -16,6 +16,7 @@
 
 .questionCard h4 {
   font-family: 'ZenKurenaido';
+  white-space: nowrap;
 }
 
 .questionWord {
